# World.JS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD  README.md  appveyor.yml  build.py  clean.bat  emcc.bat  main.cpp  server.bat  test.bat
.github/workflows/: cmake.yml  codeql-analysis.yml  greetings.yml  main.yml
doc/: index.html
doc/assets/css/: styles.min.css
doc/assets/js/: WorldJSd.js
docs/: README.md  index.html
docs/assets/js/: WorldJSd.js  WorldJSd.wasm
docs/zh-cn/: README.md
example/html/: wavread.html
src/: Config.h  Converter.cpp  Converter.h  WorldJS.cpp  WorldJS.h
src/JS/: StaticDebug.js
src/Wav2World/: Wav2World.cpp  Wav2World.h
src/Wav2World/Module/: WorldModule.cpp  WorldModule.h  WorldPara.h
src/WorldJS/: Configuration.cpp  Configuration.h  ErrorCode.cpp  ErrorCode.h  WorldJS.h  WorldJSWrapper.cpp  WorldJSWrapper.h  WorldNative.cpp  WorldNative.h  WorldNativeFun.cpp  WorldNativeFun.h  WorldNativeIO.cpp  WorldNativeIO.h
test/: index.html  temp_test.cpp
tools/: README.md
